--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna recipe</a>
+    <h1 align="center">Odin Recipes</h1>
+    
+    <hr>
+    <div align="center">
+        <img src="images/ratatouille6.jpg" alt="">
+    </div>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="recipes/lasagna.html"><em>Lasagna</em>Recipe </a></li>
+        <li><a href=""></a><em>Lasagna</em>Recipe </a></li>
+        <li><a href=""></a><em>Lasagna</em>Recipe </a></li>
+    </ul>
 </body>
 </html>
