--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="recipes/lasagna.html"><em>Lasagna</em>Recipe </a></li>
-        <li><a href="recipes/caramel_apple.html"><em>Caramel Apple</em>Recipe </a></li>
-        <li><a href="recipes/basmati_rice.html"></a><em>Basmati Rice</em>Recipe </a></li>
+        <li><a href="recipes/lasagna.html"><em>Lasagna</em> Recipe </a></li>
+        <li><a href="recipes/caramel_apple.html"><em>Caramel Apple</em> Recipe </a></li>
+        <li><a href="recipes/basmati_rice.html"><em>Basmati Rice</em> Recipe</a></li>
     </ul>
 </body>
 </html>
