--- a/recipes/basmati_rice.html
+++ b/recipes/basmati_rice.html
@@ -10,7 +10,7 @@
     <a href="../index.html">Home</a>
     <hr>
     <div align="center">
-        <h1><strong><em> Lasagna</em></strong></h1>
+        <h1><strong><em> Basmati Rice</em></strong></h1>
     
         <img src="../images/basmati.webp" alt="basmati picture">
     </div>
