changing css for the project recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Project Recipes</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
     <hr>
     <div align="center">
-        <h1><strong><em> Lasagna</em></strong></h1>
+        <h1> Lasagna</h1>
     
         <img src="../images/lasana.webp" alt="lasagna picture">
     </div>
