--- a/recipes/basmati_rice.html
+++ b/recipes/basmati_rice.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Project Recipes</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
     <hr>
-    <div align="center">
+    <div align="center" >
         <h1><strong><em> Basmati Rice</em></strong></h1>
     
         <img src="../images/basmati.webp" alt="basmati picture">
     </div>
     <hr>
-    <div>
+    <div id="bold-text">
         <h2>Description</h2>
         <p> These are perfect for a weeknight, guilt-free meal with the family that
             even the kids will love! Any leftover stuffing can be kept in the fridge for 3 days </p>
